# ism330dhcx-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
bsp/: Cargo.toml  README.md  build.rs
bsp/src/: main.rs
bsp/src/examples/: fsm_free_fall.rs  mlc_six_d.rs  read_polling.rs  self_test.rs  sensor_hub.rs  sensor_hub_fifo.rs
examples/fsm_freefall_detection_stm32f401re/: Cargo.toml  README.md  build.rs
examples/fsm_freefall_detection_stm32f401re/src/: main.rs  mlc_config.rs
examples/fsm_freefall_detection_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/fsm_freefall_detection_stm32f401re_embassy/src/: main.rs  mlc_config.rs
examples/mlc_six_d_position_stm32f401re/: Cargo.toml  README.md  build.rs  openocd.gdb
examples/mlc_six_d_position_stm32f401re/src/: main.rs  mlc_config.rs
examples/mlc_six_d_position_stm32f401re_embassy/: Cargo.toml  README.md  build.rs
examples/mlc_six_d_position_stm32f401re_embassy/src/: main.rs  mlc_config.rs
examples/read_data_polling_stm32f401re/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re/src/: main.rs
examples/read_data_polling_stm32f401re_embassy/: Cargo.toml  README.md
examples/read_data_polling_stm32f401re_embassy/src/: main.rs
examples/self_test_stm32f401re/: Cargo.toml  README.md
examples/self_test_stm32f401re/.cargo/: config.toml
examples/self_test_stm32f401re/src/: main.rs
examples/self_test_stm32f401re_embassy/: Cargo.toml  README.md
examples/self_test_stm32f401re_embassy/src/: main.rs
examples/sensor_hub_iis2mdc_fifo_timestamp_stm32f401re/: Cargo.toml  README.md
examples/sensor_hub_iis2mdc_fifo_timestamp_stm32f401re/src/: main.rs
examples/sensor_hub_iis2mdc_fifo_timestamp_stm32f401re_embassy/: Cargo.toml  README.md
examples/sensor_hub_iis2mdc_fifo_timestamp_stm32f401re_embassy/.cargo/: config.toml
examples/sensor_hub_iis2mdc_fifo_timestamp_stm32f401re_embassy/src/: main.rs
examples/sensor_hub_iis2mdc_stm32f401re/: Cargo.toml  README.md
examples/sensor_hub_iis2mdc_stm32f401re/src/: main.rs
examples/sensor_hub_iis2mdc_stm32f401re_embassy/: Cargo.toml  README.md
examples/sensor_hub_iis2mdc_stm32f401re_embassy/src/: main.rs
src/: driver.rs  lib.rs  prelude.rs
src/register/: advanced.rs  embedded.rs  main.rs  mod.rs  sensor_hub.rs
