[package]
name = "ism330dhcx-rs"
version = "2.0.0"
edition = "2024"
rust-version = "1.87.0"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "imu", "mlc", "fsm"]
repository = "https://github.com/STMicroelectronics/ism330dhcx-rs"
description = """
  Platform-agnostic driver for the ISM330DHCX high-accuracy 3D accelerometer and gyroscope with
  ultra-low noise, smart FIFO, sensor hub, MLC, FSM, and advanced industrial features.
"""

[lib]
doctest = false

[dependencies]
bisync = "0.3.0"
bitfield-struct = "0.11.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
derive_more = { version = "2.0.1", default-features = false, features = [ "try_from" ] }
st-mems-bus = "2.0.0"
st-mem-bank-macro = "2.0.0"
half = { version = "2.7.1", default-features = false }

# Features
# --------
# - By default the async API is enabled via the `async` feature.
#   Enable `blocking` to use the blocking variant instead.
#
# - Bit order defaults to Least Significant Bit first.
#   Enable `bit_order_msb` to use Most Significant Bit first.
[features]
default = ["async"]
# Expose the asynchronous driver module.
async = []
# Expose the blocking driver module.
blocking = []
# Expose passthrough mode used for SensorHub.
passthrough = []
# Use Most Significant Bit first instead of the default LSB-first ordering.
bit_order_msb = []

[package.metadata.docs.rs]
all-features = true
