[package]
authors = ["STMicroelectronics"]
edition = "2021"
readme = "README.md"
name = "fsm_freefall_detection_stm32f401re"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-itm = "0.4.2"
ism330dhcx-rs = { path = "../../" }
st-mems-reg-config-conv = { version = "1.0.0" }

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f401"]

[build-dependencies]
st-mems-reg-config-conv = { version = "1.0.0", features = ["std"] }

# this lets you use `cargo fix`!
[[bin]]
name = "fsm_freefall_detection_stm32f401re"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
