[package]
authors = ["STMicroelectronics"]
edition = "2024"
name = "read_data_polling_stm32f401re_embassy"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f401re", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }

embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3", features = ["async"]}
embedded-io-async = "0.6.1"

ism330dhcx-rs = { path = "../../" }

[[bin]]
name = "read_data_polling_stm32f401re_embassy"
test = false
bench = false

[profile.release]
debug = 2
codegen-units = 1
lto = true
